# hepml-digest

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
data/: state.json
docs/: deploy_zh.md
prompts/: review.txt  screen.txt
public/: atom.xml  hep-applications.xml  index.html  methods.xml  rss.xml
src/hepml_digest/: __init__.py  cli.py  config.py  fetch.py  llm.py  models.py  pipeline.py  publish.py  store.py
tests/: test_fetch.py  test_pipeline.py
tests/fixtures/: arxiv_atom.xml  arxiv_rss.xml
