[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "hepml-digest"
version = "0.1.0"
description = "Daily arXiv statistical-learning digest for experimental HEP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0,<7",
  "feedgen>=1.0,<2",
  "openai>=1.75,<3",
  "pydantic>=2.10,<3",
  "tenacity>=9,<10",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
hepml-digest = "hepml_digest.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
